--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id ="card">
         <div id="full-screen"></div>
-        <div id ="storiyan">
+        <div id ="striyan">
             
         </div>
     </div>
